feat: add migrations for new models

--- a/GlobalExpertise/App.config
+++ b/GlobalExpertise/App.config
@@ -10,8 +10,17 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2"/>
     </startup>
     <entityFramework>
+      <contexts>
+        <context type="GlobalExpertise.DAL.EnterpriseContext, GlobalExpertise">
+          <databaseInitializer type="GlobalExpertise.DAL.Initializer, GlobalExpertise" />
+        </context>
+      </contexts>
         <providers>
             <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer"/>
         </providers>
     </entityFramework>
+  <connectionStrings >
+    <add name="EnterpriseContext" connectionString="Data Source = .; initial Catalog=GlobalExpertise; Integrated Security=True"
+            providerName="System.Data.SqlClient"/>
+  </connectionStrings>
 </configuration>
