--- a/GlobalExpertise/GlobalExpertise.csproj
+++ b/GlobalExpertise/GlobalExpertise.csproj
@@ -100,6 +100,8 @@
     <Compile Include="models\PurchaseOrder.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="services\Users.cs" />
+    <Compile Include="Utils\EntityValidator.cs" />
     <Compile Include="views\Dashbord.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -186,9 +188,7 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="services\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <Content Include="Resources\2307372.png" />
     <Content Include="Resources\4094476.png" />
