feat: add product Image in model,  save and display images in product creation

--- a/GlobalExpertise/GlobalExpertise.csproj
+++ b/GlobalExpertise/GlobalExpertise.csproj
@@ -98,6 +98,10 @@
     <Compile Include="Migrations\202101251307167_update.designer.cs">
       <DependentUpon>202101251307167_update.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202101261512584_updateProductEntity.cs" />
+    <Compile Include="Migrations\202101261512584_updateProductEntity.designer.cs">
+      <DependentUpon>202101261512584_updateProductEntity.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="models\Category.cs" />
     <Compile Include="models\Customer.cs" />
@@ -191,6 +195,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202101251307167_update.resx">
       <DependentUpon>202101251307167_update.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202101261512584_updateProductEntity.resx">
+      <DependentUpon>202101261512584_updateProductEntity.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
